force-app/main/default/objects/Object_Promotion__c/Object_Promotion__c.object-meta.xml
<CustomObject>
    <description>Tren Quote cũng có, Quote Promotion, Opporunity cũng có Opportunity promotion, trên Order cũng có, Order Promotion</description>
    <label>Object Promotion</label>
    <nameField>
        <displayFormat>OP-{0000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>