force-app/main/default/objects/Object_Promotion__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Object Promotions</relationshipLabel>
    <relationshipName>Object_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>