force-app/main/default/objects/Object_Promotion__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion</label>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>Object Promotions</relationshipLabel>
    <relationshipName>Object_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>