force-app/main/default/objects/Object_Promotion__c/fields/Promotion_Item__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>if the record type of promotion item is promotion voucher. That will put the promotion Id here.</description>
    <label>Promotion Item</label>
    <referenceTo>Promotion_Item__c</referenceTo>
    <relationshipLabel>Object Promotions</relationshipLabel>
    <relationshipName>Object_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>