force-app/main/default/objects/Object_Promotion__c/fields/Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Type__c</fullName>
    <label>Promotion Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>