force-app/main/default/objects/Object_Promotion__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Object Promotions</relationshipLabel>
    <relationshipName>Object_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>