force-app/main/default/objects/Object_Promotion__c/fields/Service_Apply__c.field-meta.xml
<CustomField>
    <fullName>Service_Apply__c</fullName>
    <label>Service Apply</label>
    <length>100</length>
    <type>Text</type>
</CustomField>